# Chess-CPP

./: CMakeLists.txt  CMakePresets.json  Chess_3.sln  Chess_3.vcxproj  Chess_3.vcxproj.filters  Chess_4_cmake_vcpkg.h  README.md  lib.h  main.cpp  packages.config
Chess_3/x64/Debug/: Chess_3.exe.recipe  Chess_3.ilk  Chess_3.vcxproj.FileListAbsolute.txt  vc143.idb
Chess_3/x64/Debug/Chess_3.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Chess_3.lastbuildstate  Chess_3.write.1u.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
Controller/: ChessGame.cpp  ChessGame.h
